# narratix2.0

./: .dockerignore  .env.template  .gitignore  .railwayignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backup  Makefile  README.md  add_background_music.py  alembic.ini  debug_voice_generation.py  deployment-guide.md  flow.md  force_alignment_text39.json  generate_force_alignment.py  main.py  narratix.db  narratix_local.db  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements-production.txt  requirements.txt  setup.py  test_startup.py
alembic/: env.py
api/: main.py
db/: crud.py  database.py  models.py  narratix.db-shm  session_manager.py
docs/: Graphic_audio_production.md  api-endpoint-alignment-tasks.md  audiox-api-documentation.md  llama-3-replicate.md  logging.md  midsummerr_webhook_removal_tasks.md  music_gen.md  narratix-readme.md  parallel-processing-infrastructure.md  production-deployment.md  replicate-audio-refactoring-tasks.md  service-layer-refactoring-tasks.md  sound_effects_project.md  stable-audio-replicate.md  standalone-to-cli-wrapper-tasks.md  tasks-md.md  webhook-replicate-optimization.md
migrations/: alembic.ini  create_migration.py
narratix/: __init__.py  main.py
narratix2/: database.py
schemas/: sound_effect.py
scripts/: audiox_bg_music.py  clean_audio_glitches.py  delete_hume_voice.py  download_segment_audio.py  end_to_end_connectivity_test.py  export_audio.py  export_background_music.py  generate_bg_music_prompt.py  input_interactive_e2e  input_interactive_e2e.txt  interactive_e2e_processing.py  run_migrations.py  simple_e2e_pipeline.py  sync-ngrok  test_external_api_integrations.py  test_neon_connection.py  track1_speech_pipeline.py  track2_audio_pipeline.py  update_ngrok_url.py  verify_domain_setup.py
services/: __init__.py  audio_analysis.py  audio_generation.py  audio_pipeline.py  background_music.py  clients.py  combine_export_audio.py  complete_pipeline.py  force_alignment.py  interfaces.py  pipeline_orchestration.py  r2_storage.py  replicate_audio.py  sound_effects.py  speech_generation.py  speech_pipeline.py  text_analysis.py  voice_generation.py  webhook_recovery.py
tests/: README.md  __init__.py  conftest.py  run_integration_tests.sh  test_basic_flow.py  (+14 more)
(+200 files in other folders)
